[package]
name = "lightning"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = "0.7.3"
ddp-rs = "0.3.2"
flume = "0.11.0"
maxminddb = "0.23.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
